assets/scss/components/blocks-plugins/_kadence-blocks.scss
@use "abstracts" as *;
@use "../../vendor/include-media" as *;


/* Kadence Blocks
---------------------------------------------------------------------------- */

.entry-content > * {

	.full-width-content &,
	.content-width & {

        &.wp-block-kadence-rowlayout.alignfull {
            padding: 0;
        }
    }

    a {
    
        &.kb-advanced-heading-link {
            text-decoration: none;

            &:hover,
            &:focus {

                h2,
                h3,
                h4,
                h5,
                h6 {
                    color: $base-color;
                }
            }
        }
        
    }
}

.entry-content > * {

    // reset Kadence buttons padding spaces to equal native buttons.
    & .kt-btn-wrap .kt-button:not(.kb-btn-global-inherit) {
        padding: .6em 1.8em;
    }

    .kt-blocks-carousel {

        // .slick-prev, 
        // .slick-next {
        //     opacity: .4;
        // }

        .cromwell-carousel & {

            .slick-prev {
                left:-15px
            }
    
            .slick-next {
                right: -15px;
            }
        }

        .slick-prev {
            left:-15px
        }

        .slick-next {
            right: -15px;
        }

        .kt-carousel-arrowstyle-outlineblack .slick-prev, 
        .kt-carousel-arrowstyle-outlineblack .slick-next {
            border: none;
            color: $base-color;
        }

        .slick-prev::before,
        .slick-next::before {
            height: 26px;
            width: 26px;
        }
    }

    
}

